IngressLoadBalencerTest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
   ingress.bluemix.net/client-max-body-size: "size=0" #disable size checking
spec:
  rules:
  - host: haitao.lon06.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: uploadserversvc
          servicePort: 80
